--- a/sistema_calificaciones.ui
+++ b/sistema_calificaciones.ui
@@ -55,8 +55,8 @@
   <widget class="QLineEdit" name="input_name">
    <property name="geometry">
     <rect>
-     <x>80</x>
-     <y>150</y>
+     <x>70</x>
+     <y>140</y>
      <width>121</width>
      <height>31</height>
     </rect>
@@ -66,7 +66,7 @@
    <property name="geometry">
     <rect>
      <x>270</x>
-     <y>150</y>
+     <y>140</y>
      <width>42</width>
      <height>22</height>
     </rect>
@@ -79,7 +79,7 @@
    <property name="geometry">
     <rect>
      <x>420</x>
-     <y>150</y>
+     <y>140</y>
      <width>69</width>
      <height>22</height>
     </rect>
@@ -88,8 +88,8 @@
   <widget class="QPushButton" name="add_button">
    <property name="geometry">
     <rect>
-     <x>80</x>
-     <y>220</y>
+     <x>270</x>
+     <y>230</y>
      <width>121</width>
      <height>41</height>
     </rect>
@@ -101,8 +101,8 @@
   <widget class="QPushButton" name="save_button">
    <property name="geometry">
     <rect>
-     <x>260</x>
-     <y>220</y>
+     <x>780</x>
+     <y>630</y>
      <width>121</width>
      <height>41</height>
     </rect>
@@ -114,8 +114,8 @@
   <widget class="QPushButton" name="delete_button">
    <property name="geometry">
     <rect>
-     <x>80</x>
-     <y>280</y>
+     <x>720</x>
+     <y>290</y>
      <width>121</width>
      <height>41</height>
     </rect>
@@ -127,8 +127,8 @@
   <widget class="QTableWidget" name="tblGrades">
    <property name="geometry">
     <rect>
-     <x>430</x>
-     <y>320</y>
+     <x>420</x>
+     <y>340</y>
      <width>531</width>
      <height>271</height>
     </rect>
@@ -137,7 +137,7 @@
   <widget class="QCalendarWidget" name="calendar">
    <property name="geometry">
     <rect>
-     <x>680</x>
+     <x>590</x>
      <y>50</y>
      <width>312</width>
      <height>183</height>
@@ -147,33 +147,18 @@
   <widget class="QListWidget" name="list_students">
    <property name="geometry">
     <rect>
-     <x>50</x>
+     <x>40</x>
      <y>380</y>
      <width>256</width>
      <height>192</height>
     </rect>
    </property>
   </widget>
-  <widget class="QLineEdit" name="lineEdit">
-   <property name="geometry">
-    <rect>
-     <x>90</x>
-     <y>330</y>
-     <width>161</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Lista de estudiantes</string>
-   </property>
-  </widget>
-
-  <!-- NUEVOS FILTROS -->
   <widget class="QSpinBox" name="filter_min_grade">
    <property name="geometry">
     <rect>
      <x>430</x>
-     <y>610</y>
+     <y>650</y>
      <width>61</width>
      <height>22</height>
     </rect>
@@ -186,7 +171,7 @@
    <property name="geometry">
     <rect>
      <x>510</x>
-     <y>610</y>
+     <y>650</y>
      <width>100</width>
      <height>22</height>
     </rect>
@@ -196,13 +181,88 @@
    <property name="geometry">
     <rect>
      <x>630</x>
-     <y>610</y>
+     <y>650</y>
      <width>91</width>
      <height>23</height>
     </rect>
    </property>
    <property name="text">
     <string>Filtrar</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_4">
+   <property name="geometry">
+    <rect>
+     <x>420</x>
+     <y>290</y>
+     <width>291</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Registro de notas y asistencia</string>
+   </property>
+  </widget>
+  <widget class="QTextEdit" name="comentario">
+   <property name="geometry">
+    <rect>
+     <x>60</x>
+     <y>230</y>
+     <width>171</width>
+     <height>41</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_5">
+   <property name="geometry">
+    <rect>
+     <x>70</x>
+     <y>200</y>
+     <width>211</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Agregue comentarios</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_6">
+   <property name="geometry">
+    <rect>
+     <x>50</x>
+     <y>335</y>
+     <width>251</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Lista de estudiantes </string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_7">
+   <property name="geometry">
+    <rect>
+     <x>640</x>
+     <y>10</y>
+     <width>191</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Seleccione la fecha :</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_8">
+   <property name="geometry">
+    <rect>
+     <x>60</x>
+     <y>20</y>
+     <width>431</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>SISTEMA DE CALIFICACIONES</string>
    </property>
   </widget>
  </widget>
