--- a/sistema_calificaciones.ui
+++ b/sistema_calificaciones.ui
@@ -90,7 +90,7 @@
     <rect>
      <x>270</x>
      <y>230</y>
-     <width>121</width>
+     <width>171</width>
      <height>41</height>
     </rect>
    </property>
@@ -114,9 +114,9 @@
   <widget class="QPushButton" name="delete_button">
    <property name="geometry">
     <rect>
-     <x>720</x>
+     <x>820</x>
      <y>290</y>
-     <width>121</width>
+     <width>161</width>
      <height>41</height>
     </rect>
    </property>
@@ -193,9 +193,9 @@
   <widget class="QLabel" name="label_4">
    <property name="geometry">
     <rect>
-     <x>420</x>
+     <x>590</x>
      <y>290</y>
-     <width>291</width>
+     <width>231</width>
      <height>41</height>
     </rect>
    </property>
@@ -263,6 +263,32 @@
    </property>
    <property name="text">
     <string>SISTEMA DE CALIFICACIONES</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_9">
+   <property name="geometry">
+    <rect>
+     <x>430</x>
+     <y>700</y>
+     <width>551</width>
+     <height>71</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Nota. Se puede editar los datos del estudiante en misma tabla de registro.</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="load_register">
+   <property name="geometry">
+    <rect>
+     <x>430</x>
+     <y>290</y>
+     <width>131</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Abrir  reporte</string>
    </property>
   </widget>
  </widget>
